--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-modal-image": "^2.6.0",
     "react-slick": "^0.30.2"
   },
