--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.11.11",
     "next": "15.0.3",
     "react": "^18.0.0",
